--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.5"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "react": "^18.3.1"
   }
 }
